erDiagram
    Projects ||--o{ UserStories : contains
    UserStories ||--o{ Criteria : has
    UserStories ||--o{ Comments : has
    UserStories ||--o{ Labels : tagged_with
    Users ||--o{ UserStories : creates
    Users ||--o{ Comments : writes
    Users ||--o{ Projects : owns

    Projects {
        int id PK
        string name
        string description
        datetime created_at
        int owner_id FK
    }

    UserStories {
        int id PK
        string title
        text description
        enum status
        enum priority
        datetime created_at
        datetime updated_at
        datetime due_date
        int project_id FK
        int creator_id FK
        int owner_id FK
    }

    Criteria {
        int id PK
        string title
        text description
        boolean is_mandatory
        int story_id FK
        datetime created_at
    }

    Users {
        int id PK
        string email
        string username
        string password_hash
        string full_name
        datetime created_at
        boolean is_active
    }

    Comments {
        int id PK
        text content
        datetime created_at
        datetime updated_at
        int user_id FK
        int story_id FK
    }

    Labels {
        int id PK
        string name
        string color
        int project_id FK
    }